enable Java preview and try out string templates